update url image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="header-left">
                     <div class="image">
-                        <img src="/img/my-img.jpg" alt="" class="my-img">
+                        <img src="img/my-img.jpg" alt="my-img" class="my-img">
                     </div>
                 </div>
                 <div class="header-right">
@@ -204,7 +204,7 @@
                 <div class="project-list">
                     <div class="project-item">
                         <div class="project-item__img">
-                            <img src="/img/keyboard.jpg" alt="keyboard">
+                            <img src="img/keyboard.jpg" alt="keyboard">
                         </div>
                         <div class="project-item__hover">
                             <h3 class="project-item__title">Web The Band</h3>
@@ -218,29 +218,29 @@
                     </div>
                     <div class="project-item">
                         <div class="project-item__img">
-                            <img src="/img/chill.jpg" alt="keyboard">
+                            <img src="img/chill.jpg" alt="keyboard">
                         </div>
                         <div class="project-item__hover">
                             <h3 class="project-item__title">Web clone</h3>
                             <div class="project-item__preview">
-                                <a href="https://github.com/nhat1998/web-colne" class="project-item__source" target="_blank">
+                                <a href="https://github.com/nhat1998/web-clone" class="project-item__source" target="_blank">
                                     <i class="project-item__source-icon fab fa-github"></i>
                                 </a>
-                                <a href="https://nhat1998.github.io/web-colne/" class="project-item__btn" target="_blank">Preview</a>
+                                <a href="https://nhat1998.github.io/web-clone/" class="project-item__btn" target="_blank">Preview</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-item">
                         <div class="project-item__img">
-                            <img src="/img/keyboard.jpg" alt="keyboard">
+                            <img src="img/keyboard.jpg" alt="keyboard">
                         </div>
                         <div class="project-item__hover">
-                            <h3 class="project-item__title">Web The Band</h3>
+                            <h3 class="project-item__title">Web Gymnastics</h3>
                             <div class="project-item__preview">
-                                <a href="https://github.com/nhat1998/Web_The-Band" class="project-item__source" target="_blank">
+                                <a href="https://github.com/nhat1998/Gymnastics" class="project-item__source" target="_blank">
                                     <i class="project-item__source-icon fab fa-github"></i>
                                 </a>
-                                <a href="https://nhat1998.github.io/Web_The-Band/" class="project-item__btn" target="_blank">Preview</a>
+                                <a href="https://nhat1998.github.io/Gymnastics/" class="project-item__btn" target="_blank">Preview</a>
                             </div>
                         </div>
                     </div>
