--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </div>
                     <div class="project-item">
                         <div class="project-item__img">
-                            <img src="img/keyboard.jpg" alt="keyboard">
+                            <img src="img/pc.jpg" alt="keyboard">
                         </div>
                         <div class="project-item__hover">
                             <h3 class="project-item__title">Web Gymnastics</h3>
